@@ -1,0 +1,2 @@
+assets:
+  - path: umockdev-*.tar.xz
